--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,3 @@
-VITE_SUPABASE_URL=https://YOUR_PROJECT.supabase.co
-VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+VITE_SUPABASE_URL=https://cvyqjcuegoyjddprumzv.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_Tx5J0zAA7ubtAdxSE0Mwcw_D_FfBIXO
 VITE_APP_URL=http://localhost:5173
